--- a/src/app/passengers/containers/trip/trip.component.scss
+++ b/src/app/passengers/containers/trip/trip.component.scss
@@ -78,14 +78,24 @@
 .driver-container {
   position: absolute;
   bottom: 1rem;
-  z-index: 2;
-  width: 100vw;
-  height: 20rem;
+  z-index: 1;
+  height: 18rem;
+  width: 100%;
   display: flex;
-  margin-right: 0.5rem;
   overflow-x: scroll;
 }
 
-.drivers {
-  width: 200rem;
+.selected {
+  z-index: 1;
+  width: 100%;
+  height: 30rem;
+  @include flex-column;
+  gap: 1rem;
+  position: absolute;
+  bottom: 3rem;
+
+  .driver {
+    height: 100%;
+    width: 80%;
+  }
 }
