--- a/src/app/shared/available-drivers/components/available-drivers.component.html
+++ b/src/app/shared/available-drivers/components/available-drivers.component.html
@@ -1,16 +1,5 @@
 <div class="container">
-  <div class="labels">
-    <div class="label">
-      <span>A</span>
-      <span>17:45</span>
-    </div>
-    <div class="label estimated">
-      <span>F</span>
-      <span>17:45</span>
-    </div>
-  </div>
-  <img src="https://biiz-bucket.s3.us-east-2.amazonaws.com/car.png" />
-  <div ref="slider" class="price">
-    <span>155.00 LPS</span>
+  <div *ngFor="let driver of drivers" class="cards" (click)="selected.emit(driver)">
+    <app-driver-card [driver]="driver"></app-driver-card>
   </div>
 </div>
