awaiting trip component added

--- a/src/app/shared/buttons/components/secondary-button/secondary-button.component.scss
+++ b/src/app/shared/buttons/components/secondary-button/secondary-button.component.scss
@@ -6,7 +6,7 @@
   border: none;
   font-size: 1rem;
   font-weight: bold;
-  min-height: 6.2rem;
+  height: 100%;
   width: 100%;
   letter-spacing: 0.1rem;
   position: relative;
