--- a/src/app/shared/driver-card/components/driver-card.component.html
+++ b/src/app/shared/driver-card/components/driver-card.component.html
@@ -1,12 +1,21 @@
 <div class="card" [ngClass]="{'selected-driver' : unique}">
-  <div class="labels">
-    <div class="label">
-      <span>A {{ driver.id }} </span>
-      <span>17:45</span>
+  <div class="labels" [ngClass]="{'unique-labels' : unique}">
+    <div class="label" [ngClass]="{'unique-label' : unique}">
+      <span class="span">
+        <img
+          class="icon"
+          [ngClass]="{'icon' : unique}"
+          [ngClass]="{'unique-icon' : unique}"
+          src="https://biiz-bucket.s3.us-east-2.amazonaws.com/passenger-location.png"
+        />
+        <p class="no-margin">{{ driver.id }} </p>
+      </span>
+      <p class="no-margin">17:45</p>
     </div>
-    <div class="label estimated">
-      <span>F</span>
-      <span>17:45</span>
+    <div class="label estimated" [ngClass]="{'unique-label' : unique}">
+      <ion-icon name="location-sharp">
+      </ion-icon>
+      <p class="no-margin">17:45</p>
     </div>
   </div>
   <img class="image" src="https://biiz-bucket.s3.us-east-2.amazonaws.com/car.png" />
