--- a/src/app/shared/driver-card/components/driver-card.component.scss
+++ b/src/app/shared/driver-card/components/driver-card.component.scss
@@ -14,7 +14,7 @@
 
 .labels {
   width: 100%;
-  height: 30%;
+  height: 40%;
   display: flex;
   flex-direction: column;
   gap: 0.25rem;
@@ -26,9 +26,24 @@
   width: 100%;
   padding: 0.25rem;
   display: flex;
+  align-items: center;
   justify-content: space-between;
   border-radius: 0.4rem;
   font-weight: bold;
+
+  .span {
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+  }
+
+  .icon {
+    height: 1.5rem;
+  }
+
+  .unique-icon {
+    height: 2rem;
+  }
 }
 
 .estimated {
@@ -53,4 +68,17 @@
 
 .selected-driver {
   font-size: 2rem;
+}
+
+.unique-labels {
+  width: 90%;
+  margin: 1rem 1rem 0 1rem;
+
+  .unique-label {
+    padding: 1rem;
+  }
+}
+
+.no-margin {
+  margin: 0;
 }
