--- a/src/app/passengers/containers/awaiting-trip/awaiting-trip.component.html
+++ b/src/app/passengers/containers/awaiting-trip/awaiting-trip.component.html
@@ -1,6 +1,8 @@
+<app-shared-loading class="loading" *ngIf="loading"></app-shared-loading>
+
 <div class="container">
   <div class="map" #map></div>
-  <app-shared-header></app-shared-header>
+  <app-shared-header class="header"></app-shared-header>
 
   <div class="driver-container">
     <app-driver-card class="driver" [unique]="true"  [driver]="driver"></app-driver-card>
