--- a/src/app/passengers/containers/driver-arrived/driver-arrived.component.scss
+++ b/src/app/passengers/containers/driver-arrived/driver-arrived.component.scss
@@ -1,61 +1,48 @@
 @import 'src/app/core/sass/global';
 
-.header {
-  z-index: 2;
-}
-
-.container, .map {
+.container {
   width: 100%;
   height: 100%;
-}
-
-.container {
-  position: relative;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-}
 
-.driver-container {
-  z-index: 1;
-  @include flex-column;
-  width: 100%;
-  gap: 0.3rem;
-  position: absolute;
-  bottom: 3rem;
+  .info-wrapper {
+    height: 100%;
+    margin-bottom: 2rem;
+    @include flex-column;
+  }
 
-  .red-button {
-    background-color: $red;
-    color: $white;
-    display: flex;
+  .section {
+    @include flex-column;
+    height: 100%;
+    width: 90%;
     justify-content: center;
-    width: 80%;
-    font-size: 1rem;
-    padding: 0.2rem;
-    margin: 0;
+    background-color: setColor(firm-gray, 100);
   }
 
-  .driver{
-    width: 80%;
-    height: 25rem;
-  }
 }
 
-.row {
+.body {
+  margin-bottom: 8rem;
   width: 80%;
-  display: flex;
-  gap: 0.3rem;
+  height: 65%;
+  @include flex-column;
+  background-color: $white;
+  justify-content: flex-end;
 
-  .option {
-    height: 4rem;
-    width: 50%;
+  .icon {
+    color: $green;
+    font-size: 4rem;
+  }
+
+  .label {
+    margin-bottom: 6rem;
+    font-size: 1.1rem;
+    text-shadow: 0.4rem 0.2rem 1rem #534848;
   }
 }
-.icon {
-  font-size: 2rem;
-  height: 2rem;
-}
 
-.map {
-  position: absolute;
+.btn {
+  margin-top: 0.5rem;
+  width: 90%;
 }
