trip detail component added, and logic to finish the trip improved

--- a/src/app/passengers/containers/finish-trip/finish-trip.component.html
+++ b/src/app/passengers/containers/finish-trip/finish-trip.component.html
@@ -4,11 +4,11 @@
     <section class="section">
       <div class="body">
         <ion-icon class="icon" name="checkmark-circle"></ion-icon>
-        <p class="label">TU CONDUCTOR TE ESPERA AFUERA</p>
+        <p class="label">HAS LLEGADO A TU DESTINO</p>
       </div>
     </section>
-    <app-primary-button class="btn">
-      BAJATE IJUEPUTA
+    <app-primary-button class="btn" (btnClick)="tripDetails()">
+      RESUMEN DE VIAJE
     </app-primary-button>
   </div>
 </div>
