feat: Hackathon Sept 2023 (#85)
* websocket implemented to show closest driver time in homeComponent

* simple loading screen added to trip component

* linting issues fixed

* driver car markers added in trip component

* changed webSocket url and api url to heroku

* map implementation optimizes, google geocoder used instead, plugin removed

* loading implemented with a timeout in trip component

* add: comments and driver markers

* fix: linting

* timeouts added in trip component

* animation added in trip confirmed

* made input readonly when travel is confirmed

* driver and passenger marker tweaked

* add: available-drivers component

* improve: styling

* remove: unused import

* animation added to drivers wrapper

* driver card added to trip component

* passenger id added to cookies, and info sent from trip component

* fare added to trip interface

* awaiting trip component added

* ws for confirmed trip added

* driver tracking works!

* console logs removed

* arrived validation and component added

* driver arrvied component added

* finish travel logic done

* wsUrl fixed

* trip detail component added, and logic to finish the trip improved

---------

Co-authored-by: Roger! <icarus.gk@gmail.com>

--- a/src/app/passengers/containers/trip/trip.component.html
+++ b/src/app/passengers/containers/trip/trip.component.html
@@ -1,7 +1,9 @@
+<app-shared-loading class="loading" *ngIf="loading"></app-shared-loading>
+
 <div class="container">
   <div class="map" #map></div>
-  <app-shared-header></app-shared-header>
-  <div class="button-container">
+  <app-shared-header class="header"></app-shared-header>
+  <div class="button-container" [ngClass]="{'animate': travelConfirmed}">
     <div class="autocomplete">
       <div class="autocomplete-img">
         <img class="logo" src="assets/images/location-arrows.svg">
@@ -9,33 +11,51 @@
       <div class="input-wrapper">
         <ion-input
           [(ngModel)]="autocompleteCurrent.input"
-          (ionInput)="UpdateSearchResults(true)"
+          (ionInput)="UpdateSearchResults(autocompleteCurrent)"
           placeholder="Dirección actual"
-          (ionClear)="ClearAutocomplete(true)"
+          (ionClear)="ClearAutocomplete()"
+          [clearInput]="!travelConfirmed"
+          [readonly]="travelConfirmed"
         ></ion-input>
-        <ion-list *ngIf="autocompleteCurrentAddresses.length !== 0">
-          <ion-item *ngFor="let item of autocompleteCurrentAddresses" tappable (click)="SelectSearchResult(item, true)">
+        <ion-list *ngIf="autocompleteCurrentAddresses.length !== 0 && !travelConfirmed">
+          <ion-item *ngFor="let item of autocompleteCurrentAddresses" tappable (click)="SelectSearchResult(item.description)">
             {{ item.description }}
           </ion-item>
         </ion-list>
         <ion-input
           [(ngModel)]="autocompleteDestination.input"
-          (ionInput)="UpdateSearchResults()"
+          (ionInput)="UpdateSearchResults(autocompleteDestination, true)"
           placeholder="Dirección de destino"
-          (ionClear)="ClearAutocomplete()"
+          (ionClear)="ClearAutocomplete(true)"
+          [clearInput]="!travelConfirmed"
+          [readonly]="travelConfirmed"
         ></ion-input>
-        <ion-list *ngIf="autocompleteDestinationAddresses.length !== 0">
-          <ion-item *ngFor="let item of autocompleteDestinationAddresses" tappable (click)="SelectSearchResult(item)">
+        <ion-list *ngIf="autocompleteDestinationAddresses.length !== 0  && !travelConfirmed">
+          <ion-item *ngFor="let item of autocompleteDestinationAddresses" tappable (click)="SelectSearchResult(item.description, true)">
             {{ item.description }}
           </ion-item>
         </ion-list>
       </div>
     </div>
-    <div class="options">
+    <div [@inAnimation] class="driver-container" *ngIf="!driverSelected && travelConfirmed">
+      <app-available-drivers
+        [drivers]="drivers"
+        (selected)="selectDriver($event)"
+      >
+      </app-available-drivers>
+    </div>
+    <div [@inAnimation] class="selected" *ngIf="driverSelected && travelConfirmed" >
+      <app-driver-card class="driver" [driver]="selectedDriver" [unique]="true"></app-driver-card>
+      <app-primary-button class="confirm" (btnClick)="startTrip()">
+        <p class="text">CONFIRMAR VIAJE</p>
+        <img class="button-image" [src]="imageUrl">
+      </app-primary-button>
+    </div>
+    <div class="options" *ngIf="!travelConfirmed">
       <app-secondary-button class="btn">EVENTOS</app-secondary-button>
       <app-secondary-button class="btn">PROGRAMAR</app-secondary-button>
     </div>
-    <app-primary-button class="confirm">
+    <app-primary-button class="confirm" (btnClick)="submit()" *ngIf="!travelConfirmed">
       <p class="text">CONFIRMAR DESTINO</p>
       <img class="button-image" [src]="imageUrl">
     </app-primary-button>
