--- a/src/app/passengers/containers/trip/trip.component.scss
+++ b/src/app/passengers/containers/trip/trip.component.scss
@@ -1,5 +1,9 @@
 @import 'src/app/core/sass/global';
 
+.header {
+  z-index: 2;
+}
+
 .container, .map {
   width: 100%;
   height: 100%;
@@ -20,6 +24,7 @@
   @include flex-column;
   gap: 0.5rem;
   margin-bottom: 3rem;
+  transition: margin-bottom 1.5s ease-in-out;
 
   .confirm {
     width: 90%;
@@ -38,6 +43,7 @@
   .btn {
     text-align: center;
     width: 50%;
+    height: 6.2rem;
     border-radius: 0.4rem;
   }
 }
@@ -64,4 +70,33 @@
 
 .input-wrapper {
   width: 90%;
+}
+
+.animate {
+  margin-bottom: 100rem;
+}
+
+.driver-container {
+  position: absolute;
+  bottom: 1rem;
+  z-index: 1;
+  height: 18rem;
+  width: 100%;
+  display: flex;
+  overflow-x: scroll;
+}
+
+.selected {
+  z-index: 1;
+  width: 100%;
+  height: 30rem;
+  @include flex-column;
+  gap: 1rem;
+  position: absolute;
+  bottom: 3rem;
+
+  .driver {
+    height: 100%;
+    width: 80%;
+  }
 }
