feat: full trip working

--- a/src/app/passengers/containers/trip-detail/trip-detail.component.html
+++ b/src/app/passengers/containers/trip-detail/trip-detail.component.html
@@ -10,13 +10,17 @@
           <ion-icon class="icon" name="card"></ion-icon>
         </span>
       </div>
-      <div class="trip-info inter">
+      <div class="trip-info">
         <p class="red-label">REPORTAR</p>
         <div class="address-wrapper">
+          <div class="time-container inter">
+            <p class="time"> {{ startTime }} </p>
+            <p class="time"> {{ endTime }} </p>
+          </div>
           <img class="image" src="assets/images/location-arrows.svg">
-          <div>
-            <p class="address">Loma Alta, Lomas del Guijarro</p>
-            <p>Col. Las Colinas, Bloque B</p>
+          <div class="address-container">
+            <p class="address"> {{ trip.startAddress }} </p>
+            <p class="address"> {{ trip.endAddress }} </p>
           </div>
         </div>
       </div>
@@ -27,7 +31,7 @@
       </div>
       <div class="footer">
         <img class="logo" src="https://biiz-bucket.s3.us-east-2.amazonaws.com/atlantis-logo-white.png">
-        <p class="fare">177.00 LPS</p>
+        <p class="fare"> {{ trip.fare }} LPS</p>
       </div>
     </section>
     <app-primary-button
