--- a/src/app/passengers/containers/trip-detail/trip-detail.component.scss
+++ b/src/app/passengers/containers/trip-detail/trip-detail.component.scss
@@ -55,6 +55,7 @@
     width: 90%;
     padding: 0.5rem;
     font-size: 3rem;
+    border-radius: 0.5rem;
 
     .icon {
       margin-right: 1rem;
@@ -75,19 +76,41 @@
     justify-content: flex-end;
     color: $red;
   }
+}
 
-  .address-wrapper {
-    display: flex;
-    align-items: flex-start;
-    margin-left: 2rem;
-    width: 60%;
-    gap: 0.5rem;
-    font-size: 1.1rem;
-  }
+.address-wrapper {
+  display: flex;
+  align-items: flex-start;
+  width: 90%;
+  height: 100%;
+  gap: 0.5rem;
+  font-size: 1.1rem;
 
-  .address {
-    margin: -0.5rem 0 2rem 0;
+  .time, .address {
+    margin: 0;
   }
+}
+
+.time-container {
+  width: 20%;
+  height: 65%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  font-size: 1rem;
+}
+
+.image {
+  height: 60%;
+}
+
+.address-container {
+  width: 70%;
+  height: 75%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  font-size: 1.2rem;
 }
 
 .tip {
