events component created and mockuped

--- a/src/app/passengers/containers/home/home.component.html
+++ b/src/app/passengers/containers/home/home.component.html
@@ -8,7 +8,7 @@
       </div>
       <app-white-button message="SOLICITAR UNIDAD"></app-white-button>
     </section>
-    <section class="experience-container" [routerLink]="['../experiences']">
+    <section class="experience-container" [routerLink]="['../events']">
       <app-white-button message="EVENTOS"></app-white-button>
     </section>
     <section class="shared-container">
