--- a/src/app/shared/profile/components/profile/profile.component.html
+++ b/src/app/shared/profile/components/profile/profile.component.html
@@ -17,7 +17,7 @@
       <p class="service-label">SERVICIO AL CLIENTE</p>
     </section>
     <div class="main-button">
-      <app-primary-button>Terminos y condiciones</app-primary-button>
+      <app-primary-button (btnClick)="removeCookies()">Terminos y condiciones</app-primary-button>
     </div>
   </div>
 </ion-content>
