--- a/src/app/passengers/containers/events/events.component.html
+++ b/src/app/passengers/containers/events/events.component.html
@@ -1,10 +1,10 @@
 <app-shared-loading class="loading" *ngIf="loading"></app-shared-loading>
 
-<div class="container">
+<div class="container"  [ngClass]="{'barcode-scanner-active' : scanOpen}">
   <div class="map" #map></div>
   <div class="header-wrapper">
     <app-shared-header class="header"></app-shared-header>
-    <div class="event-info" *ngIf="selectedEvent.label === 'concerts'">
+    <div class="event-info" *ngIf="selectedEvent.id !== 0">
       <div class="img">
         <img class="logo" src="assets/images/location-arrows.svg">
       </div>
@@ -35,12 +35,23 @@
         <p class="concert-fare"> IDA Y VUELTA L.360.00 </p>
       </div>
     </div>
+    <div (click)="selectMatch()" class="concert-wrapper" *ngIf="selectedEvent.label === 'sports'">
+      <p class="concert-name"> OLIMPIA VS MOTAGUA </p>
+      <div class="concert-info">
+        <p class="concert-place" [ngClass]="{'selected' : matchSelected}"> ESTADIO JOSE DE LA PAZ UCLES </p>
+        <p class="concert-fare"> IDA Y VUELTA L.400.00 </p>
+      </div>
+    </div>
+    <div (click)="scan()" class="scan-wrapper" *ngIf="selectedEvent.label === 'scan'">
+      <p class="concert-name"> ESCANEAR CODIGO </p>
+      <ion-icon class="camera" name="camera"></ion-icon>
+    </div>
   </div>
   <div class="button-container">
     <div [@inAnimation] class="events-container" *ngIf="!eventSelected">
       <app-available-events [events]="events" (selected)="selectEvent($event)"></app-available-events>
     </div>
-    <div [@inAnimation] *ngIf="eventSelected && selectedConcert === 0">
+    <div [@inAnimation] *ngIf="eventSelected && !hideCard">
       <ion-icon (click)="eventList()" class="icon" name="arrow-back-circle"></ion-icon>
       <app-event-card [event]="selectedEvent" [unique]="true"></app-event-card>
     </div>
@@ -52,7 +63,7 @@
         <p class="msg inter"> {{ message }} </p>
       </div>
     </div>
-    <app-primary-button (btnClick)="startTrip()" class="confirm">
+    <app-primary-button (btnClick)="startTrip(selectedEvent)" class="confirm">
       <p class="text">CONFIRMAR DESTINO</p>
       <img class="button-image" [src]="imageUrl">
     </app-primary-button>
