--- a/src/app/passengers/containers/events/events.component.scss
+++ b/src/app/passengers/containers/events/events.component.scss
@@ -152,3 +152,26 @@
     text-align: center;
   }
 }
+
+.scan-wrapper {
+  @include flex-center;
+  margin: 2rem 0;
+  width: 90%;
+  gap: 1rem;
+
+  .concert-name {
+    background-color: $green;
+    height: 3rem;
+    @include flex-center;
+    margin: 0;
+    width: 80%;
+    border-radius: 0.5rem;
+  }
+
+  .camera {
+    background-color: $black;
+    color: $green;
+    font-size: 3rem;
+    border-radius: 0.5rem;
+  }
+}
