current driver card added, eta added

--- a/src/app/passengers/containers/awaiting-trip/awaiting-trip.component.html
+++ b/src/app/passengers/containers/awaiting-trip/awaiting-trip.component.html
@@ -5,7 +5,12 @@
   <app-shared-header class="header"></app-shared-header>
 
   <div class="driver-container">
-    <app-driver-card class="driver" [unique]="true"  [driver]="driver"></app-driver-card>
+    <app-current-driver
+      class="driver-card"
+      [trip]="trip"
+      [tripTime]="time"
+    >
+    </app-current-driver>
     <div class="row">
       <app-secondary-button class="option">
         <ion-icon name="chatbox" class="icon"></ion-icon>
@@ -14,6 +19,6 @@
         <img class="icon" src="https://biiz-bucket.s3.us-east-2.amazonaws.com/call.png" alt="Llamada">
       </app-secondary-button>
     </div>
-    <p class="red-button">CANCELAR</p>
+    <p class="red-button">CANCELAR  {{time}}</p>
   </div>
 </div>
