--- a/src/app/shared/current-driver-card/components/current-card.component.html
+++ b/src/app/shared/current-driver-card/components/current-card.component.html
@@ -2,7 +2,7 @@
   <div class="labels">
     <app-timer class="label" [tripTime]="tripTime"></app-timer>
     <app-timer
-      [tripTime]="tripTime"
+      [tripTime]="tripTime + 600"
       [startTimerOnInit]="false"
       [isGray]="true"
       class="label"
