--- a/src/app/passengers/containers/events/events.component.scss
+++ b/src/app/passengers/containers/events/events.component.scss
@@ -77,101 +77,40 @@
   }
 }
 
-.concert-wrapper {
-  @include flex-column;
-  gap: 0.5rem;
-  margin: 1rem 0 0 0;
-  width: 90%;
-
-  .concert-name {
-    @include flex-center;
-    width: 100%;
-    font-size: 1.2rem;
-    height: 3rem;
-    margin: 0;
-    background-color: $white;
-    border-radius: 0.2rem;
-  }
-}
-
-.concert-info {
+.event-details {
   @include flex-center;
-  font-size: 0.8rem;
-  gap: 0.5rem;
-  width: 100%;
-
-  .concert-place, .concert-fare {
-    @include flex-center;
-    margin: 0;
-    border-radius: 0.2rem;
-  }
-
-  .concert-place {
-    width: 60%;
-    background-color: setColor(firm-gray, 100);
-  }
-
-  .selected {
-    background-color: $green;
-  }
-
-  .concert-fare {
-    width: 40%;
-    background-color: $black;
-    color: $white;
-  }
+  width: 90%;
 }
 
-.karol {
+.event-image {
   @include flex-center;
   gap: 1rem;
   width: 90%;
   height: 14.3rem;
+  width: 14.7rem;
+  object-fit: cover;
   border-radius: 0.5rem;
 }
 
-.black-box {
+.event-description {
   @include flex-column;
   justify-content: center;
   color: $white;
   border-radius: 0.5rem;
   height: 100%;
-  gap: 1rem;
   background-color: rgba(0, 0, 0, 0.75);;
-  font-size: 1.2rem;
-
-  .label {
-    line-height: 1.5rem;
-    margin: 0;
-  }
-
-  .msg {
-    margin: 0 1.5rem;
-    font-size: 0.8rem;
-    line-height: 0.8rem;
-    text-align: center;
-  }
+  margin: 0 0 0 1.5rem;
+  font-size: 1rem;
+  line-height: 1rem;
+  text-align: center;
+  padding: 1rem;
 }
 
-.scan-wrapper {
-  @include flex-center;
-  margin: 2rem 0;
+
+.event {
   width: 90%;
-  gap: 1rem;
-
-  .concert-name {
-    background-color: $green;
-    height: 3rem;
-    @include flex-center;
-    margin: 0;
-    width: 80%;
-    border-radius: 0.5rem;
-  }
-
-  .camera {
-    background-color: $black;
-    color: $green;
-    font-size: 3rem;
-    border-radius: 0.5rem;
-  }
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  margin-top: 0.5rem;
 }
