--- a/src/app/shared/event-card/components/event-card.component.html
+++ b/src/app/shared/event-card/components/event-card.component.html
@@ -1,4 +1,4 @@
 <div class="card" [ngClass]="{'selected-event' : unique}">
-  <img class="img" [src]='imageUrl(event.label)'/>
-  <p class="label"> {{ event.label }} </p>
+  <img class="img" [src]='imageUrl(event)'/>
+  <p class="label"> {{ event }} </p>
 </div>
