qr code scanning functionality added

--- a/src/app/passengers/containers/events/events.component.html
+++ b/src/app/passengers/containers/events/events.component.html
@@ -21,6 +21,13 @@
         ></ion-input>
       </div>
     </div>
+    <ion-icon
+      (click)="scan()"
+      class="scan"
+      name="camera"
+      *ngIf="selectedEvent === 'escanear' && !singleEventSelected"
+    >
+    </ion-icon>
     <app-event-list
       [@inAnimation]
       class="event"
