--- a/src/app/passengers/containers/events/events.component.scss
+++ b/src/app/passengers/containers/events/events.component.scss
@@ -106,11 +106,17 @@
   padding: 1rem;
 }
 
-
 .event {
   width: 90%;
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
   margin-top: 0.5rem;
+}
+
+.scan {
+  font-size: 4rem;
+  margin-top: 2rem;
+  background-color: $green;
+  border-radius: 50%;
 }
