--- a/src/app/passengers/containers/address/address.component.html
+++ b/src/app/passengers/containers/address/address.component.html
@@ -8,7 +8,7 @@
       <div class="content">
         <p class="title">MIS DIRECCIONES</p>
         <p class="address" *ngFor="let address of addresses"> {{ address.name }} </p>
-        <img class="icon" *ngIf="addresses.length < 3" [src]="iconUrl" [routerLink]="'../new-address'">
+        <img class="icon" *ngIf="addresses.length < 3" [src]="iconUrl" (click)="goToPath('/passenger/new-address')">
         <div class="footer-wrapper">
           <div class="weather">
             <img class="weather-image" [src]="weatherImage"/>
