--- a/src/app/shared/profile/components/profile/profile.component.html
+++ b/src/app/shared/profile/components/profile/profile.component.html
@@ -12,7 +12,7 @@
         <app-display-button message="NOTIFICACIONES" class="car-box bottom-right"></app-display-button>
       </div>
     </section>
-    <section class="customer-service" [routerLink]="['../customer-service']">
+    <section class="customer-service" (click)="goTocustomerService()">
       <img class="image" src="https://biiz-bucket.s3.us-east-2.amazonaws.com/iiz.png" alt="Customer Image">
       <p class="service-label">SERVICIO AL CLIENTE</p>
     </section>
