addCard component added

--- a/src/app/shared/profile/components/profile/profile.component.html
+++ b/src/app/shared/profile/components/profile/profile.component.html
@@ -8,7 +8,7 @@
         <app-display-button message="MIS DATOS" class="car-box top-right" link="/passenger/user-info"></app-display-button>
       </div>
       <div class="row">
-        <app-display-button message="INGRESAR TARJETA" class="car-box bottom-left"></app-display-button>
+        <app-display-button message="INGRESAR TARJETA" class="car-box bottom-left" link="/passenger/add-card"></app-display-button>
         <app-display-button message="NOTIFICACIONES" class="car-box bottom-right"></app-display-button>
       </div>
     </section>
