my-trips component added

--- a/src/app/shared/profile/components/profile/profile.component.html
+++ b/src/app/shared/profile/components/profile/profile.component.html
@@ -4,7 +4,7 @@
     <app-profile-header [showEditIcon]="true" class="profile"></app-profile-header>
     <section class="profile-options">
       <div class="row">
-        <app-display-button message="MIS VIAJES" class="car-box top-left"></app-display-button>
+        <app-display-button message="MIS VIAJES" class="car-box top-left" link="/passenger/my-trips"></app-display-button>
         <app-display-button message="MIS DATOS" class="car-box top-right" link="/passenger/user-info"></app-display-button>
       </div>
       <div class="row">
