--- a/src/app/shared/profile/components/profile/profile.component.html
+++ b/src/app/shared/profile/components/profile/profile.component.html
@@ -9,7 +9,7 @@
       </div>
       <div class="row">
         <app-display-button message="INGRESAR TARJETA" class="car-box bottom-left" link="/passenger/add-card"></app-display-button>
-        <app-display-button message="NOTIFICACIONES" class="car-box bottom-right"></app-display-button>
+        <app-display-button message="NOTIFICACIONES" class="car-box bottom-right" link="/passenger/notifications"></app-display-button>
       </div>
     </section>
     <section class="customer-service" (click)="goTocustomerService()">
