fare algorithm and eta added

--- a/src/app/passengers/containers/home/home.component.html
+++ b/src/app/passengers/containers/home/home.component.html
@@ -24,6 +24,6 @@
       ></app-display-button>
     </section>
 
-    <app-primary-button class="button" (btnClick)="test()">MIS VIAJES</app-primary-button>
+    <app-primary-button class="button" (btnClick)="goToPath('/passenger/my-trips')">MIS VIAJES</app-primary-button>
   </div>
 </ion-content>
