--- a/src/app/shared/driver-card/components/driver-card.component.html
+++ b/src/app/shared/driver-card/components/driver-card.component.html
@@ -1,4 +1,5 @@
-<div class="card" [ngClass]="{'selected-driver' : unique}">
+<app-shared-loading *ngIf="loading"></app-shared-loading>
+<div class="card" [ngClass]="{'selected-driver' : unique}" *ngIf="!loading">
   <div class="labels" [ngClass]="{'unique-labels' : unique}">
     <div class="label" [ngClass]="{'unique-label' : unique}">
       <span class="span">
@@ -10,16 +11,16 @@
         />
         <p class="no-margin">{{ driver.id }} </p>
       </span>
-      <p class="no-margin">17:45</p>
+      <p class="no-margin"> {{ arriveTime }} </p>
     </div>
     <div class="label estimated" [ngClass]="{'unique-label' : unique}">
       <ion-icon name="location-sharp">
       </ion-icon>
-      <p class="no-margin">17:45</p>
+      <p class="no-margin"> {{ finishTime }} </p>
     </div>
   </div>
-  <img class="image" src="https://biiz-bucket.s3.us-east-2.amazonaws.com/car.png" />
+  <img class="image" [src]="imageUrl" />
   <div class="price" [ngClass]="{'selected-driver' : unique}">
-    <span>155.00 LPS</span>
+    <span> {{ fare }} </span>
   </div>
 </div>
