fare added to ws and trip

--- a/src/app/passengers/containers/awaiting-trip/awaiting-trip.component.html
+++ b/src/app/passengers/containers/awaiting-trip/awaiting-trip.component.html
@@ -8,7 +8,6 @@
     <app-current-driver
       class="driver-card"
       [trip]="trip"
-      [tripTime]="time"
     >
     </app-current-driver>
     <div class="row">
@@ -19,6 +18,6 @@
         <img class="icon" src="https://biiz-bucket.s3.us-east-2.amazonaws.com/call.png" alt="Llamada">
       </app-secondary-button>
     </div>
-    <p class="red-button">CANCELAR  {{time}}</p>
+    <p class="red-button">CANCELAR</p>
   </div>
 </div>
