--- a/src/app/shared/buttons/components/display-button/display-button.component.html
+++ b/src/app/shared/buttons/components/display-button/display-button.component.html
@@ -1,4 +1,4 @@
 <section class="display-container" (click)="goToPath()">
   <div class="title">{{ title }}</div>
-  <app-white-button [message]="message"></app-white-button>
+  <app-white-button [isGreen]="labelGreen" [message]="message"></app-white-button>
 </section>
