--- a/src/app/shared/buttons/components/white-button/white-button.component.scss
+++ b/src/app/shared/buttons/components/white-button/white-button.component.scss
@@ -16,6 +16,7 @@
   background-color: $white;
   font-size: 0.8rem;
   width: 11.7rem;
+  margin: 0;
   border-radius: 0.3rem;
 }
 
@@ -34,4 +35,9 @@
   .icon {
     font-size: 1.2rem;
   }
+}
+
+
+.green {
+  background-color: $green;
 }
