specials linked to trip COmponent

--- a/src/app/passengers/containers/specials/specials.component.html
+++ b/src/app/passengers/containers/specials/specials.component.html
@@ -1,24 +1,24 @@
 <app-shared-header></app-shared-header>
 <ion-content>
   <div class="container">
-    <section class="specials-container">
+    <section class="specials-container" (click)="goToPath()">
       <div class="label main-banner-soon">SOON</div>
       <div class="button-container">
         <div class="label">2KM</div>
         <app-white-button message="RENTAR"></app-white-button>
       </div>
     </section>
-    <section class="ambulance-container">
+    <section class="ambulance-container" (click)="goToPath()">
       <div class="button-container">
         <app-white-button message="AMBULANCIA"></app-white-button>
         <div class="label">7MIN</div>
       </div>
     </section>
     <section class="shared-container">
-      <section class="armored-container">
+      <section class="armored-container" (click)="goToPath()">
         <app-white-button message="BLINDADOS"></app-white-button>
       </section>
-      <section class="crane-container">
+      <section class="crane-container" (click)="goToPath()">
         <app-white-button message="GRUA"></app-white-button>
       </section>
     </section>
